# blog-frontend

./: .gitignore  Caddyfile  Cargo.toml  Dockerfile  LICENSE  README.md  Trunk.toml  index.html  run_caddy.sh
.github/workflows/: build.yml
assets/css/: main.scss
assets/ibm-plex/scss/: ibm-plex.scss
src/: constants.rs  main.rs
src/api/: mod.rs
src/pages/: about.rs  dashboard.rs  edit_post.rs  editor.rs  list_posts.rs  login.rs  main.rs  mod.rs  new_post.rs  not_found_page.rs  post_preview.rs  register.rs  view_post.rs
src/services/: cookie.rs  mod.rs  render.rs  router.rs
