[package]
name = "blog-frontend"
version = "0.1.0"
authors = ["Ace Kim <quickwshell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", branch = "master" }
yew-router = { git = "https://github.com/yewstack/yew/", branch = "master" }
yew-services = { git = "https://github.com/yewstack/yew/", branch = "master" }
yew-material = { git = "https://github.com/quickn-blog/yew-material", branch = "master", features = ["full"] }
wasm-bindgen = "0.2.70"
wasm-bindgen-futures = "0.4.20"
web-sys = { version = "0", features = ["HtmlDocument", "HtmlDivElement"] }
serde = "1"
anyhow = "1"
serde_json = "1"
wasm-logger = "^0.2.0"
log = "0.4.14"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4.19", features = ["serde", "wasmbind"] }
chrono-tz = "0.5.3"
pulldown-cmark = { version = "0.8", default-features = false }
katex-wasmbind = "0.8.0"